# LinearManager

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  FIELD_ANALYSIS.md  README.md  list_recent_issues.py  pyproject.toml  pytest.ini  test_issues.yaml  test_project_query.py  test_pull.py
.github/workflows/: test.yml
scripts/: delete_issues.py  introspect_schema.py  test_project_query.py
src/linear_manager/: __init__.py  cli.py  config.py  git_worktree.py  operations.py  sync.py
test_manifests/: bug-fixes.yaml  feature-auth.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_cli_add.py  test_cli_check.py  test_cli_list.py  test_linear_client.py  test_manifest_parsing.py  test_push_integration.py  test_sync_integration.py  test_team_context.py
